--- a/src/views/product.html
+++ b/src/views/product.html
@@ -18,7 +18,7 @@
                 <div class="main-about__content">
                     <div class="main-about__content-wrapper">
                         <h2 class="main-about__content-title">
-                            Лицензирование
+                            Лицензия РОСАТОМ
                         </h2>
                         <p class="main-about__content-txt">
                             Amet, aenean morbi massa vitae diam risus tellus aliquet. Consectetur ornare ultrices nunc elit, purus tempor. Commodo amet, nibh a et nibh. Ridiculus id morbi leo ut mi mi commodo rhoncus. Consectetur tristique cursus etiam diam fringilla. Amet est enim suspendisse mi sed gravida sit nisl dui. Amet, aenean morbi massa vitae diam risus tellus aliquet. 
@@ -28,12 +28,94 @@
             </div>
         </div>
     </section>
-    <section class="our-help">
+    <section class="blockquote blockquote_quote">
         <div class="container">
-            <h2 class="our-help__title">
-                Мы оказываем помощь в лицензировании по следующим направлениям:
+            <p class="blockquote__txt">
+                Amet, aenean morbi massa vitae diam risus tellus aliquet. Consectetur ornare ultrices nunc elit, purus tempor. Commodo amet, nibh a et nibh. Ridiculus id morbi leo ut mi mi commodo rhoncus. Consectetur tristique cursus etiam diam fringilla. Amet est enim suspendisse mi sed gravida sit nisl dui. Amet, aenean morbi massa vitae diam risus tellus aliquet. 
+            </p>
+        </div>
+    </section>
+    <section class="contacts contacts_bg">
+        <div class="container">
+            <div class="contacts__row">
+                <div class="contacts__info">
+                    <h2 class="contacts__title">
+                        Свяжитесь с нами или оставьте заявку
+                    </h2>
+                    <div class="contacts__info-row">
+                        <div class="contacts__col">
+                            <div class="contacts__col-item contacts__item">
+                                <div class="contacts__item-title">
+                                    Адрес
+                                </div>
+                                <div class="contacts__item-info">
+                                    67 West Street
+                                    Suite 401
+                                    Brooklyn, NY 11222
+                                </div>
+                            </div>
+                            <div class="contacts__col-item contacts__item">
+                                <a href="" class="contacts__item-viewmap">
+                                    Посмотреть карту
+                                </a>
+                            </div>
+                        </div>
+                        <div class="contacts__col">
+                            <div class="contacts__col-item contacts__item">
+                                <div class="contacts__item-title">
+                                    Телефон
+                                </div>
+                                <a href="tel: +7 (999) 999-99-99" class="contacts__item-info contacts__item-info_link">
+                                    +7 (999) 999-99-99
+                                </a>
+                            </div>
+                            <div class="contacts__col-item contacts__item">
+                                <div class="contacts__item-title">
+                                    E-mail
+                                </div>
+                                <a href="mailto: test@gmail.com" class="contacts__item-info contacts__item-info_link">
+                                    test@gmail.com
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <form action="" class="contacts__form">
+                    <p class="contacts__form-txt">
+                        Заполните необходимые поля, чтобы мы смогли легко связаться с вами и проконсультировать
+                    </p>
+                    <div class="contacts__form-group">
+                        <input type="text" class="contacts__form-input" placeholder="Название компании" require>
+                    </div>
+                    <div class="contacts__form-group">
+                        <input type="text" class="contacts__form-input" placeholder="Ваше имя" require>
+                    </div>
+                    <div class="contacts__form-group">
+                        <input type="email" class="contacts__form-input" placeholder="Ваш E-mail" require>
+                    </div>
+                    <div class="contacts__form-group">
+                        <input type="tel" class="contacts__form-input" placeholder="Телефон" require>
+                    </div>
+                    <div class="contacts__form-group">
+                        <input type="text" class="contacts__form-input" placeholder="Комментарии">
+                    </div>
+                    <div class="contacts__form-group">
+                        <button class="contacts__form-submit">
+                            Отправить заявку
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    
+
+    <section class="product-category">
+        <div class="container">
+            <h2 class="product-category__title">
+                Другие направления категории
             </h2>
-            <div class="our-help__row categories">
+            <div class="product-category__row categories">
                 <div class="categories__item-wrapper">
                     <a href="" class="categories__item">
                         <div class="categories__item-image">
@@ -274,125 +356,9 @@
             </div>
         </div>
     </section>
-    <section class="blockquote">
-        <div class="container">
-            <p class="blockquote__txt">
-                И многие другие направления. Более подробную информацию, Вы можете уточнить у персонального менеджера! Мы подготовим все необходимые документы и обеспечим их своевременную подачу для оформления лицензии.
-            </p>
-        </div>
-    </section>
-    <section class="contacts contacts_bg">
-        <div class="container">
-            <div class="contacts__row">
-                <div class="contacts__info">
-                    <h2 class="contacts__title">
-                        Свяжитесь с нами или оставьте заявку
-                    </h2>
-                    <div class="contacts__info-row">
-                        <div class="contacts__col">
-                            <div class="contacts__col-item contacts__item">
-                                <div class="contacts__item-title">
-                                    Адрес
-                                </div>
-                                <div class="contacts__item-info">
-                                    67 West Street
-                                    Suite 401
-                                    Brooklyn, NY 11222
-                                </div>
-                            </div>
-                            <div class="contacts__col-item contacts__item">
-                                <a href="" class="contacts__item-viewmap">
-                                    Посмотреть карту
-                                </a>
-                            </div>
-                        </div>
-                        <div class="contacts__col">
-                            <div class="contacts__col-item contacts__item">
-                                <div class="contacts__item-title">
-                                    Телефон
-                                </div>
-                                <a href="tel: +7 (999) 999-99-99" class="contacts__item-info contacts__item-info_link">
-                                    +7 (999) 999-99-99
-                                </a>
-                            </div>
-                            <div class="contacts__col-item contacts__item">
-                                <div class="contacts__item-title">
-                                    E-mail
-                                </div>
-                                <a href="mailto: test@gmail.com" class="contacts__item-info contacts__item-info_link">
-                                    test@gmail.com
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <form action="" class="contacts__form">
-                    <p class="contacts__form-txt">
-                        Заполните необходимые поля, чтобы мы смогли легко связаться с вами и проконсультировать
-                    </p>
-                    <div class="contacts__form-group">
-                        <input type="text" class="contacts__form-input" placeholder="Название компании" require>
-                    </div>
-                    <div class="contacts__form-group">
-                        <input type="text" class="contacts__form-input" placeholder="Ваше имя" require>
-                    </div>
-                    <div class="contacts__form-group">
-                        <input type="email" class="contacts__form-input" placeholder="Ваш E-mail" require>
-                    </div>
-                    <div class="contacts__form-group">
-                        <input type="tel" class="contacts__form-input" placeholder="Телефон" require>
-                    </div>
-                    <div class="contacts__form-group">
-                        <input type="text" class="contacts__form-input" placeholder="Комментарии">
-                    </div>
-                    <div class="contacts__form-group">
-                        <button class="contacts__form-submit">
-                            Отправить заявку
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
-    <section class="main-today">
-        <div class="container">
-            <div class="main-today__row">
-                <div class="main-today__title">
-                    Сегодня <br> Евроком это:
-                </div>
-                <div class="main-today__info">
-                    <div class="main-today__item">
-                        <div class="main-today__item-title">
-                            20 лет
-                        </div>
-                        <p class="main-today__item-txt">
-                            успеха на рынке <br> консалтинговых услуг
-                        </p>
-                        <div class="main-today__item-shape"></div>
-                    </div>
-                    <div class="main-today__item">
-                        <div class="main-today__item-title">
-                            >20
-                        </div>
-                        <p class="main-today__item-txt">
-                            сотрудников <br>
-                            в нашем штате
-                        </p>
-                        <div class="main-today__item-shape"></div>
-                    </div>
-                    <div class="main-today__item">
-                        <div class="main-today__item-title">
-                            >50 тыс.
-                        </div>
-                        <p class="main-today__item-txt">
-                            клиентов воспользовались <br> нашими услугами
-                        </p>
-                        <div class="main-today__item-shape"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
+
+
     <section class="popular-news">
         <div class="container">
             <div class="popular-news__row">
