--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -37,8 +37,26 @@
     transition: .3s all;
     &:hover {
         background: #4379C0;
+        color: #fff;
     }
     &:focus {
         background: #275086;
+    }
+}
+
+%btn-blue {
+    padding: 16px 24px;
+    display: inline-block;
+    background: #EBEBEB;
+    border: none;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 100%;
+    color: #2A2C31;
+    text-decoration: none;
+    transition: .3s all;
+    &:hover {
+        color: #fff;
+        background: #3465A6;
     }
 }
