--- a/src/views/article.html
+++ b/src/views/article.html
@@ -19,7 +19,217 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
-                <img src="" alt="">
+                <img src="<%=require('@img/article-1.jpg') %>" alt="">
+                <div class="article__image-descr">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <ul>
+                    <li>
+                        Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Mattis enim ut tellus elementum sagittis vitae et. Accumsan in nisl nisi scelerisque.
+                    </li>
+                    <li>
+                        Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.
+                    </li>
+                    <li>
+                        Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Mattis enim ut tellus.
+                    </li>
+                    <li>
+                        Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.
+                    </li>
+                </ul>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <h2>
+                    Lorem ipsum dolor sit amet 
+                </h2>
+                <img src="<%=require('@img/article-2.jpg') %>" alt="">
+                <div class="article__image-descr">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </div>
+                <blockquote>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Luctus venenatis lectus magna fringilla. Magna fringilla urna porttitor rhoncus dolor purus non. Consequat interdum varius sit amet mattis vulputate. Diam sollicitudin tempor id eu nisl nunc mi ipsum faucibus. Congue eu consequat ac felis donec et odio pellentesque. Vitae auctor eu augue ut lectus arcu bibendum at varius. Sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+                    <span>
+                        (с) Владимир Смирнов
+                    </span>
+                </blockquote>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <div class="tags">
+                    <span class="tags__item">
+                        #Teg
+                    </span>
+                    <span class="tags__item">
+                        #Teg
+                    </span>
+                    <span class="tags__item">
+                        #Teg
+                    </span>
+                    <span class="tags__item">
+                        #Teg
+                    </span>
+                    <span class="tags__item">
+                        #Teg
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="like-news">
+        <div class="container">
+            <h2 class="like-news__title">
+                Похожие новости
+                <a href="" class="like-news__all">
+                    Все новости
+                </a>
+            </h2>
+            <div class="like-news__row">
+                <div class="like-news__item-wrapper">
+                    <a href="#" class="like-news__item news-item">
+                        <div class="news-item__image">
+                            <img src="<%=require('@img/news-item.jpg') %>" alt="">
+                            <div class="news-item__mainoverlay"></div>
+                            <div class="news-item__overlay"></div>
+                        </div>
+                        <div class="news-item__top">
+                            <div class="news-item__date">
+                                25.10.2021
+                            </div>
+                            <div class="news-item__tags">
+                                <div class="news-item__tags-item">
+                                    фирма
+                                </div>
+                                <div class="news-item__tags-item">
+                                    юристы
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news-item__bottom">
+                            <div class="news-item__title">
+                                Сопровождение <br>
+                                в получении лицензии. Что для этого нужно?
+                            </div>
+                            <p class="news-item__txt">
+                                Quis mattis ut ac mauris quis. Tortor, ultricies vulputate lorem erat quis.
+                            </p>
+                            <div class="news-item__more">
+                                Подробнее 
+                                <i>
+                                    <svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M17.3536 4.35355C17.5488 4.15829 17.5488 3.84171 17.3536 3.64645L14.1716 0.464466C13.9763 0.269204 13.6597 0.269204 13.4645 0.464466C13.2692 0.659728 13.2692 0.976311 13.4645 1.17157L16.2929 4L13.4645 6.82843C13.2692 7.02369 13.2692 7.34027 13.4645 7.53553C13.6597 7.7308 13.9763 7.7308 14.1716 7.53553L17.3536 4.35355ZM0 4.5H17V3.5H0V4.5Z" fill="white"/>
+                                    </svg>                                    
+                                </i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="like-news__item-wrapper">
+                    <a href="#" class="like-news__item news-item">
+                        <div class="news-item__image">
+                            <img src="<%=require('@img/news-item.jpg') %>" alt="">
+                            <div class="news-item__mainoverlay"></div>
+                            <div class="news-item__overlay"></div>
+                        </div>
+                        <div class="news-item__top">
+                            <div class="news-item__date">
+                                25.10.2021
+                            </div>
+                            <div class="news-item__tags">
+                                <div class="news-item__tags-item">
+                                    фирма
+                                </div>
+                                <div class="news-item__tags-item">
+                                    юристы
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news-item__bottom">
+                            <div class="news-item__title">
+                                Сопровождение <br>
+                                в получении лицензии. Что для этого нужно?
+                            </div>
+                            <p class="news-item__txt">
+                                Quis mattis ut ac mauris quis. Tortor, ultricies vulputate lorem erat quis.
+                            </p>
+                            <div class="news-item__more">
+                                Подробнее 
+                                <i>
+                                    <svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M17.3536 4.35355C17.5488 4.15829 17.5488 3.84171 17.3536 3.64645L14.1716 0.464466C13.9763 0.269204 13.6597 0.269204 13.4645 0.464466C13.2692 0.659728 13.2692 0.976311 13.4645 1.17157L16.2929 4L13.4645 6.82843C13.2692 7.02369 13.2692 7.34027 13.4645 7.53553C13.6597 7.7308 13.9763 7.7308 14.1716 7.53553L17.3536 4.35355ZM0 4.5H17V3.5H0V4.5Z" fill="white"/>
+                                    </svg>                                    
+                                </i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="like-news__item-wrapper">
+                    <a href="#" class="like-news__item news-item">
+                        <div class="news-item__image">
+                            <img src="<%=require('@img/news-item.jpg') %>" alt="">
+                            <div class="news-item__mainoverlay"></div>
+                            <div class="news-item__overlay"></div>
+                        </div>
+                        <div class="news-item__top">
+                            <div class="news-item__date">
+                                25.10.2021
+                            </div>
+                            <div class="news-item__tags">
+                                <div class="news-item__tags-item">
+                                    фирма
+                                </div>
+                                <div class="news-item__tags-item">
+                                    юристы
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news-item__bottom">
+                            <div class="news-item__title">
+                                Сопровождение <br>
+                                в получении лицензии. Что для этого нужно?
+                            </div>
+                            <p class="news-item__txt">
+                                Quis mattis ut ac mauris quis. Tortor, ultricies vulputate lorem erat quis.
+                            </p>
+                            <div class="news-item__more">
+                                Подробнее 
+                                <i>
+                                    <svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M17.3536 4.35355C17.5488 4.15829 17.5488 3.84171 17.3536 3.64645L14.1716 0.464466C13.9763 0.269204 13.6597 0.269204 13.4645 0.464466C13.2692 0.659728 13.2692 0.976311 13.4645 1.17157L16.2929 4L13.4645 6.82843C13.2692 7.02369 13.2692 7.34027 13.4645 7.53553C13.6597 7.7308 13.9763 7.7308 14.1716 7.53553L17.3536 4.35355ZM0 4.5H17V3.5H0V4.5Z" fill="white"/>
+                                    </svg>                                    
+                                </i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="subscribe">
+        <div class="container">
+            <div class="subscribe__row">
+                <div class="subscribe__content">
+                    <h2 class="subscribe__title">
+                        Подпишитесь на полезную рассылку
+                    </h2>
+                    <p class="subscribe__txt">
+                        Оставьте свою почту и первыми получайте <span>актуальные новости</span> и <span>предложения</span>
+                    </p>
+                </div>
+                <form action="" class="subscribe__form">
+                    <div class="subscribe__form-group">
+                        <input type="text" class="subscribe__form-control" placeholder="Введите е-mail">
+                        <button type="submit" class="subscribe__form-submit">
+                            Подписаться
+                        </button>
+                    </div>
+                    <p class="subscribe__form-txt">
+                        Нажатием кнопки "Подписаться" Вы соглашаетесь с Пользовательским соглашением и даете согласие на обработку персональных данных
+                    </p>
+                </form>
             </div>
         </div>
     </section>
