--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -157,7 +157,7 @@ body {
 .main-today {
     margin-top: 128px;
     margin-bottom: 120px;
-
+    background: #fff;
     &__row {
         display: flex;
         justify-content: space-between;
@@ -1269,5 +1269,240 @@ body {
     }
     &__more {
         width: 45px;
+    }
+}
+
+.about-quote {
+    padding-top: 81px;
+    padding-bottom: 100px;
+    background: url(../../assets/img/about-txt-bg.jpg) right top no-repeat;
+    &__top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        &-shape {
+            width: 100%;
+            max-width: 507px;
+            height: 1px;
+            background: #3465A6;
+            opacity: 0.3;
+            &_1 {
+                margin-right: 62px;
+            }
+            &_2 {
+                margin-left: 62px;
+            }
+        }
+        &-image {
+            background: #3465A6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 61px;
+            height: 61px;
+            min-width: 61px;
+        }
+    }
+    &__txt {
+        max-width: 1054px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 50px;
+        text-align: center;
+        font-weight: 500;
+        font-size: 26px;
+        line-height: 180%;
+        &-link {
+            color: #3465A6;
+        }
+    }
+}
+
+
+.about-cards {
+    padding-bottom: 320px;
+    background: url(../../assets/img/about-card-bg.png) left bottom no-repeat;
+    &__row {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -17px;
+        margin-right: -17px;
+    }
+    &__item {
+        overflow: hidden;
+        box-shadow: 0px 38px 80px rgba(12, 29, 55, 0.02), 0px 15.8755px 33.4221px rgba(12, 29, 55, 0.0143771), 0px 8.4878px 17.869px rgba(12, 29, 55, 0.0119221), 0px 4.75819px 10.0172px rgba(12, 29, 55, 0.01), 0px 2.52704px 5.32008px rgba(12, 29, 55, 0.00807786), 0px 1.05156px 2.21381px rgba(12, 29, 55, 0.00562291);
+        &-wrapper {
+            width: 33.333%;
+            padding-left: 17px;
+            padding-right: 17px;
+        }
+        position: relative;
+        height: 249px;
+        &-img {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: 1;
+        }
+        &-pic {
+            min-width: 100%;
+            min-height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+        &-content {
+            position: relative;
+            z-index: 2;
+            padding: 32px 38px;
+            color: #fff;
+        }
+        &-count {
+            width: 45px;
+            height: 45px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px dashed #FFFFFF;
+            border-radius: 50%;
+        }
+        &-txt {
+            margin-top: 50px;
+            max-width: 272px;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 145%;
+        }
+        &-overlay {
+            position: absolute; 
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            background: #3465a6ce url(../../assets/img/about-overlay.png) right top no-repeat;
+        }
+    }
+}
+
+
+.about-documents {
+    margin-top: -168px;
+    padding-bottom: 120px;
+    &__row {
+        display: flex;
+        align-items: center;
+    }
+    &__content {
+        max-width: 382px;
+        position: relative;
+    }
+    &__title {
+        font-weight: 600;
+        font-size: 34px;
+        line-height: 140%;
+    }
+    &__txt {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 160%;
+        opacity: 0.7;
+        margin-top: 25px;
+    }
+    &__slider {
+        max-width: 414px;
+        .slick-list {
+            overflow: visible;
+        }
+        &-wrapper {
+            margin-right: -1000px;
+            padding-right: 1000px;
+            padding-bottom: 300px;
+            margin-bottom: -300px;
+            padding-left: 113px;
+            overflow: hidden;
+        }
+        &-item {
+            padding-left: 17px;
+            padding-right: 17px;
+        }
+        .slick-slide {
+            opacity: 0;
+            transition: .3s all;
+            &.slick-active {
+                opacity: 1;
+                & + .slick-slide {
+                    opacity: 1;
+                }
+                & + .slick-slide + .slick-slide {
+                    opacity: 1;
+                }
+            }
+        }
+        &-image {
+            overflow: hidden;
+            filter: drop-shadow(0px 103px 80px rgba(0, 0, 0, 0.03)) drop-shadow(0px 12.8972px 10.0172px rgba(0, 0, 0, 0.015));
+            display: block;
+            img {
+                min-width: 100%;
+                min-height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+    &__nav {
+        .slick-arrow {
+            font-size: 0;
+            width: 44px;
+            height: 44px;
+            background: #3465A6 url(../../assets/img/document-arrow_active.svg) center no-repeat;
+            &:hover {
+                background-color: #4379C0;
+            }
+            &:focus {
+                background-color: #275086;
+            }
+            &.slick-disabled {
+                background: #EDEDED url(../../assets/img/document-arrow.svg) center no-repeat;
+            }
+        }
+        .slick-prev {
+            transform: rotate(180deg);
+            position: absolute;
+            left: 0;
+            bottom: -80px;
+        }
+        .slick-next {
+            position: absolute;
+            left: 136px;
+            bottom: -80px;
+        }
+    }
+    &__counter {
+        display: flex;
+        position: absolute;
+        bottom: -65px;
+        left: 60px;
+        &-now {
+            font-size: 16px;
+            line-height: 100%;
+            letter-spacing: 0.05em;
+            color: #3465A6;
+        }
+        &-slash {
+            font-size: 16px;
+            line-height: 100%;
+            letter-spacing: 0.05em;
+            color: rgba(145, 153, 173, 0.5);
+            margin-left: 4px;
+            margin-right: 4px;
+        }
+        &-all {
+            font-size: 16px;
+            line-height: 100%;
+            letter-spacing: 0.05em;
+            color: rgba(145, 153, 173, 0.5);
+        }
     }
 }
